começando css do header

--- a/index.html
+++ b/index.html
@@ -5,27 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>primeiro site</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
-  <!-- o heaver serve como um cabeçalho, logo fica na parte mais a cima do 
-  site, nele constam a imagem de logo e os itens de lista a baixo.
-   depois o css vai ajustar pra ficar bonito.-->
-  <!-- header -->
    <header>
-    <img src="assets/imagens/logo.png" alt=">"
-   
-    <nav>
-      <ul>
-        <li>home</li>
-        <li>sobre</li>
-        <li>portifolio</li>
-        <li>contato</li>
-        <li>curriculo</li>
-      </ul>
-    </nav>
-  </header>
-  <!-- final header -->
+    <img src="assets/imagens/logo.png" alt="logo">"
+     <nav>
+       <ul>
+         <li>home</li>
+         <li>sobre</li>
+         <li>contato</li>
+         <li>portifolio</li>
+         <li id ="lic">curriculo</li>
+       </ul>
+     </nav>   
+   </header>
 
   <!-- container -->
  <main>
