--- a/index.html
+++ b/index.html
@@ -5,61 +5,65 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>primeiro site</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet"  text = "text/css" href="./assets/css/style.css">
 </head>
 <body>
-   <header>
+   <header class = "container">
+    <section class="row">
     <img src="assets/imagens/logo.png" alt="logo">"
      <nav>
-       <ul>
-         <li>home</li>
-         <li>sobre</li>
-         <li>contato</li>
-         <li>portifolio</li>
-         <li id ="lic">curriculo</li>
+       <ul >
+         <li><a href="#"><b>Home</b> </a> </li>
+         <li><a href="#"> <b>Sobre </b> </a> </li>
+         <li><a href="#"> <b>Contato</b>  </a> </li>
+         <li><a href="#"> <b>Portifolio</b>  </a> </li>
+         <li ><a class = "botão" href="#"> <b>Curriculo</b></a> </li>  
        </ul>
-     </nav>   
+     </nav> 
+    </section>  
    </header>
 
   <!-- container -->
- <main>
-   <section>
+ <main class = "container">
+   <section class = "row">
      <article>
       <h1>web designer</h1>
       <h2>landing page</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  
          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-         when an unknown printer took a galley of type and.</p>
-      <a href="#">saiba mais</a>
+         when an unknown printer took a galley of type and.
+        </p>
+      <a class =" botão" href="#">saiba mais</a>
 
       </article>
-      <div>
+      <div >
         <img src="assets/imagens//pessoas-construindo-pc.png" alt="construcao de pc">
       </div>
+
+
    </section>
   
  </main>
  <!-- fim do container -->
+
  <!-- inicio footer -->
- <footer>
-   <ul>
-     <li> <a href="https://www.instagram.com/accounts/login/" target="instagram">
-          <img src="assets/imagens/logo-insta.png" alt="logo insta">
-          </a>
-     </li>
-     <li> <a href="https://twitter.com/i/flow/login" target="twitter">
-          <img src="assets/imagens//logo-twitter.png" alt="logo twitter">
-          </a>
-     </li>
-     <li> <a href="https://www.facebook.com/" target="facebook">
-          <img src="assets/imagens/logo-facebook.png" alt="logo facebook">
-          </a>
-     </li>   
-   </ul>
-   
-   <!-- fim do footer --> 
-     
-   
+ <footer class="container">
+    <ul class = "row">
+      <li> <a href="https://www.instagram.com/accounts/login/" target="instagram">
+            <img src="assets/imagens/logo-insta.png" alt="logo insta">
+            </a>
+      </li>
+      <li> <a href="https://twitter.com/i/flow/login" target="twitter">
+            <img src="assets/imagens//logo-twitter.png" alt="logo twitter">
+            </a>
+      </li>
+      <li> <a href="https://www.facebook.com/" target="facebook">
+            <img src="assets/imagens/logo-facebook.png" alt="logo facebook">
+            </a>
+      </li>   
+    </ul>
+    
  </footer>
+ <!-- fim do footer -->
 </body>
 </html>
